header and base for left side menu

--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,3 +1,8 @@
-<!--<div ng-bind="mainController.testField"></div>-->
-<div>this is header 1</div>
-<div>this is header 2</div>
+<!--<div ng-bind="appController.testField"></div>-->
+<div class="av-header row">
+    <ul class="header-icons pull-right list-inline">
+        <li><i class="fa fa-envelope"></i></li>
+        <li><i class="fa fa-bell"></i></li>
+        <li><i class="fa fa-user"></i></li>
+    </ul>
+</div>
