--- a/src/less/left-menu.less
+++ b/src/less/left-menu.less
@@ -1,4 +1,11 @@
 .left-menu {
-  background-color: blue;
+  background-color: #6C7D8E;
   width: @left-menu-width;
+  position:  absolute;
+  left: 0;
+  height: calc(~"100vh" - 50px);
+
+  a {
+    color: white;
+  }
 }
