--- a/src/less/left-menu.less
+++ b/src/less/left-menu.less
@@ -3,7 +3,7 @@
   width: @left-menu-width;
   position:  absolute;
   left: 0;
-  height: calc(~"100vh" - 50px);
+  height: calc(~"100vh" - @header-height);
 
   a {
     color: white;
