--- a/src/views/header.html
+++ b/src/views/header.html
@@ -5,4 +5,8 @@
         <li><i class="fa fa-bell"></i></li>
         <li><i class="fa fa-user"></i></li>
     </ul>
+    <ul class="header-icons pull-left list-inline">
+        <li av-collapse-main-left-menu><i class="main-left-opener fa fa-bars" aria-hidden="true"></i></li>
+    </ul>
+    <div class="logo"></div>
 </div>
