collapse after click on items

--- a/src/views/left-menu.html
+++ b/src/views/left-menu.html
@@ -1,7 +1,7 @@
 <div class="left-menu">
     <ul class="list-unstyled">
         <li ng-repeat="link in appController.links">
-            <a ng-href="{{'#/' + link}}" ng-bind="link"></a>
+            <a av-collapse-main-left-menu ng-href="{{'#/' + link}}" ng-bind="link"></a>
         </li>
     </ul>
 </div>
