--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -2,4 +2,5 @@
 @left-menu-width: 250px;
 @inner-left-width: 300px;
 @inner-right-width: 300px;
-@inner-handle-width: 15px;
+@inner-range-height: 200px;
+@inner-handle-thickness: 15px;
