--- a/src/views/dc.html
+++ b/src/views/dc.html
@@ -1,8 +1,8 @@
 <div ng-bind="dcController.testField"></div>
 <div class="inner-left-handle">
     <ul class="list-inline pull-right">
-        <li av-open-inner-left-menu><span data-toggle="tab" data-target="#settings"><i class="material-icons">build</i> Settings</span></li>
-        <li av-open-inner-left-menu class="active"><span data-toggle="tab" data-target="#data-source"><i class="fa fa-cubes" aria-hidden="true"></i> DataSource</span></li>
+        <li av-open-inner-left><span data-toggle="tab" data-target="#settings"><i class="material-icons">build</i> Settings</span></li>
+        <li av-open-inner-left class="active"><span data-toggle="tab" data-target="#data-source"><i class="fa fa-cubes" aria-hidden="true"></i> DataSource</span></li>
     </ul>
 </div>
 <div class="inner-left">
@@ -14,13 +14,13 @@
             Reserved
         </div>
     </div>
-    <div av-close-inner-left-menu class="menu-close"><i class="material-icons">close</i></div>
+    <div av-close-inner-left class="menu-close"><i class="material-icons">close</i></div>
 </div>
 
 <div class="inner-right-handle">
     <ul class="list-inline">
-        <li av-open-inner-right-menu class="active"><span data-toggle="tab" data-target="#filters"><i class="fa fa-filter" aria-hidden="true"></i> Filers</span></li>
-        <li av-open-inner-right-menu><span data-toggle="tab" data-target="#something"><i class="material-icons">perm_data_setting</i> Something</span></li>
+        <li av-open-inner-right class="active"><span data-toggle="tab" data-target="#filters"><i class="fa fa-filter" aria-hidden="true"></i> Filers</span></li>
+        <li av-open-inner-right><span data-toggle="tab" data-target="#something"><i class="material-icons">perm_data_setting</i> Something</span></li>
     </ul>
 </div>
 <div class="inner-right">
@@ -32,6 +32,23 @@
             something
         </div>
     </div>
-    <div av-close-inner-right-menu class="menu-close"><i class="material-icons">close</i></div>
+    <div av-close-inner-right class="menu-close"><i class="material-icons">close</i></div>
 </div>
-<div class="inner-range">inner range</div>
+
+<div class="inner-range-handle">
+    <ul class="list-inline">
+        <li av-open-inner-right class="active"><span data-toggle="tab" data-target="#timeline"><i class="fa fa-filter" aria-hidden="true"></i> Timeline</span></li>
+        <li av-open-inner-right><span data-toggle="tab" data-target="#range-setting"><i class="material-icons">perm_data_setting</i> Range</span></li>
+    </ul>
+</div>
+<div class="inner-range">
+    <div class="tab-content">
+        <div id="timeline" class="tab-pane fade in active">
+            Timeline
+        </div>
+        <div id="range-setting" class="tab-pane fade">
+            Range Setting
+        </div>
+    </div>
+    <div av-close-inner-right class="menu-close"><i class="material-icons">close</i></div>
+</div>
