inner range close button

--- a/src/less/inner-range.less
+++ b/src/less/inner-range.less
@@ -27,7 +27,7 @@
 .inner-range {
   padding-top: 20px;
   position: absolute;
-  bottom: 0;
+  bottom: @inner-handle-thickness;
   //right: @inner-handle-thickness;
   background-color: #C9D3DC;
   height: @inner-range-height;
