--- a/src/views/dc.html
+++ b/src/views/dc.html
@@ -50,5 +50,5 @@
             Range Setting
         </div>
     </div>
-    <div av-close-inner-right class="menu-close"><i class="material-icons">close</i></div>
+    <div av-close-inner-range class="menu-close"><i class="material-icons">close</i></div>
 </div>
