--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -4,3 +4,8 @@
 @inner-right-width: 300px;
 @inner-range-height: 200px;
 @inner-handle-thickness: 15px;
+
+
+//av-data-widget
+@widget-header-height: 30px;
+@widget-content-height: 220px;
