--- a/src/less/av-data-widget.less
+++ b/src/less/av-data-widget.less
@@ -2,6 +2,7 @@
   border: 1px solid #E8E8E8;
   border-radius: 2px;
   background-color: white;
+  margin: 10px;
 
   .widget-header {
     height: @widget-header-height;
