--- a/src/less/av-data-widget.less
+++ b/src/less/av-data-widget.less
@@ -1,4 +1,5 @@
 .widget-holder {
+  position: relative;
   border: 1px solid #E8E8E8;
   border-radius: 2px;
   background-color: white;
@@ -8,6 +9,16 @@
     height: @widget-header-height;
     line-height: @widget-header-height;
     border-bottom: 1px solid #F7F7F7;
+
+    .widget-icon {
+      position: absolute;
+      top: 0;
+      left: 5px;
+    }
+
+    .widget-title {
+      padding-left: 25px;
+    }
   }
 
   .widget-content {
