--- a/src/less/work-space-area.less
+++ b/src/less/work-space-area.less
@@ -1,5 +1,5 @@
 .work-space-area {
-  height: 300px;
-  width: 100vw;
+  height: calc(~"100vh" - @header-height);
+  width: 100%;
   overflow-y: auto;
 }
