--- a/src/views/dc.html
+++ b/src/views/dc.html
@@ -1,4 +1,5 @@
-<div av-visualization-processor>
+<button ng-click="dcController.changeSomething()">this is a button</button>
+<div av-visualization-processor page-data="dcController.pageData">
     <div class="work-space-area">
         <av-data-widget ng-repeat="widgetMeta in dcController.pageMap.workSpaces" widget-meta-data="widgetMeta"
                         widget-type="work-space" widget-index="$index"></av-data-widget>
