showing charts dataWidget controller

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -3,4 +3,10 @@ body {
   height: 100vh;
   background-color: whitesmoke;
   overflow: hidden;
+
+  &.av-body {
+    .dc-chart {
+      float: none;
+    }
+  }
 }
