--- a/src/views/av-data-widget.html
+++ b/src/views/av-data-widget.html
@@ -1,9 +1,9 @@
 <div class="widget-holder" ng-class="{'{{widgetType}}': true}">
     <div class="widget-header">
-        <span class="widget-icon"><i class="fa" ng-class="getIconClass(widgetType)" aria-hidden="true"></i></span>
+        <span class="widget-icon"><i class="fa" ng-class="widgetController.getIconClass(widgetType)" aria-hidden="true"></i></span>
         <span class="widget-title" ng-bind="widgetMetaData.title"></span>
     </div>
     <div class="widget-content" ng-attr-id="{{widgetType + '-' + widgetIndex}}">
-        <div ng-bind="dcController.testField"></div>
+        <a href="" class="reset widget-reset-button" ng-click="widgetController.resetFilter()" style="display: none;"><i class="fa fa-repeat"></i></a>
     </div>
 </div>
