--- a/src/less/av-data-widget.less
+++ b/src/less/av-data-widget.less
@@ -23,6 +23,27 @@
 
   .widget-content {
     //height: @widget-content-height;
+
+    .widget-reset-button {
+      position: absolute;
+      top: 4px;
+      right: 8px;
+      color: #6D6D6D;
+
+      -webkit-transition: -webkit-transform ease-in-out 400ms 0ms;
+      -moz-transition: -moz-transform ease-in-out 400ms 0ms;
+      -ms-transition: -ms-transform ease-in-out 400ms 0ms;
+      -o-transition: -o-transform ease-in-out 400ms 0ms;
+      transition: transform ease-in-out 400ms 0ms;
+
+      &:hover {
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+      }
+    }
   }
 }
 
