--- a/src/views/dc.html
+++ b/src/views/dc.html
@@ -1,7 +1,7 @@
 <div av-visualization-processor page-data="dcController.pageData">
     <div class="work-space-area">
         <av-data-widget ng-repeat="widgetMeta in dcController.pageMap.workSpaces" widget-meta-data="widgetMeta"
-                        widget-type="work-space" widget-index="$index"></av-data-widget>
+                        widget-type="work-space" widget-index="$index" page-type-map="dcController.typeMap"></av-data-widget>
     </div>
 
     <div class="inner-left-handle">
@@ -38,7 +38,7 @@
         <div class="tab-content">
             <div id="filters" class="tab-pane fade in active">
                 <av-data-widget ng-repeat="widgetMeta in dcController.pageMap.filters" widget-meta-data="widgetMeta"
-                                widget-type="filter" widget-index="$index"></av-data-widget>
+                                widget-type="filter" widget-index="$index" page-type-map="dcController.typeMap"></av-data-widget>
             </div>
             <div id="something" class="tab-pane fade">
                 something
@@ -60,7 +60,7 @@
         <div class="tab-content">
             <div id="timeline" class="tab-pane fade in active">
                 <av-data-widget ng-repeat="widgetMeta in dcController.pageMap.ranges" widget-meta-data="widgetMeta"
-                                widget-type="range" widget-index="$index"></av-data-widget>
+                                widget-type="range" widget-index="$index" page-type-map="dcController.typeMap"></av-data-widget>
             </div>
             <div id="range-setting" class="tab-pane fade">
                 Range Setting
