--- a/src/less/app.less
+++ b/src/less/app.less
@@ -8,5 +8,13 @@ body {
     .dc-chart {
       float: none;
     }
+
+    .widget-holder {
+      &.filter {
+        .dc-chart {
+          text-align: center;
+        }
+      }
+    }
   }
 }
