--- a/src/less/inner-range.less
+++ b/src/less/inner-range.less
@@ -29,7 +29,7 @@
   position: absolute;
   bottom: @inner-handle-thickness;
   //right: @inner-handle-thickness;
-  background-color: #C9D3DC;
+  background-color: #F5F5F5;
   height: @inner-range-height;
   width: 100vw;
   box-shadow: 0 0 25px gray;
