--- a/src/less/av-data-widget.less
+++ b/src/less/av-data-widget.less
@@ -3,7 +3,7 @@
   border: 1px solid #E8E8E8;
   border-radius: 2px;
   background-color: white;
-  margin: 10px;
+  margin: 2px 5px 7px 5px;
 
   .widget-header {
     height: @widget-header-height;
