--- a/src/less/inner-left.less
+++ b/src/less/inner-left.less
@@ -32,7 +32,7 @@
   position: absolute;
   top: @header-height;
   left: @inner-handle-thickness;
-  background-color: #C9D3DC;
+  background-color: #F5F5F5;
   height: calc(~"100vh" - @header-height);
   width: @inner-left-width;
   box-shadow: 0 0 25px gray;
