--- a/src/less/inner-right.less
+++ b/src/less/inner-right.less
@@ -32,7 +32,7 @@
   position: absolute;
   top: @header-height;
   right: @inner-handle-thickness;
-  background-color: #C9D3DC;
+  background-color: #F5F5F5;
   height: calc(~"100vh" - @header-height);
   width: @inner-right-width;
   box-shadow: 0 0 25px gray;
