--- a/src/less/inner-right.less
+++ b/src/less/inner-right.less
@@ -35,7 +35,7 @@
   background-color: #F5F5F5;
   height: calc(~"100vh" - @header-height);
   width: @inner-right-width;
-  box-shadow: 0 0 25px gray;
+  box-shadow: 0 0 5px @inner-window-shadow-color;
 
   .menu-close {
     position: absolute;
