--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -4,6 +4,7 @@
 @inner-right-width: 300px;
 @inner-range-height: 110px;
 @inner-handle-thickness: 15px;
+@inner-window-shadow-color: #5F5F5F;
 
 
 //av-data-widget
