--- a/src/less/work-space-area.less
+++ b/src/less/work-space-area.less
@@ -1,5 +1,6 @@
 .work-space-area {
   height: calc(~"100vh" - @header-height);
   width: 100%;
-  overflow-y: auto;
+  //Line blow was commented because of some jumping problems
+  //overflow-y: auto;
 }
