--- a/src/less/inner-range.less
+++ b/src/less/inner-range.less
@@ -32,7 +32,7 @@
   background-color: #F5F5F5;
   height: @inner-range-height;
   width: 100vw;
-  box-shadow: 0 0 25px gray;
+  box-shadow: 0 0 5px @inner-window-shadow-color;
 
   .menu-close {
     position: absolute;
