--- a/src/less/inner-range.less
+++ b/src/less/inner-range.less
@@ -31,14 +31,15 @@
   //right: @inner-handle-thickness;
   background-color: #F5F5F5;
   height: @inner-range-height;
-  width: 100vw;
+  //width: 100vw;
+  margin-left: 5px;
   box-shadow: 0 0 5px @inner-window-shadow-color;
 
   .menu-close {
     position: absolute;
     cursor: pointer;
     top: 0;
-    right: 30px;
+    right: 5px;
     color: grey;
   }
 }
