first time loading problem, dynamic height

--- a/src/less/av-data-widget.less
+++ b/src/less/av-data-widget.less
@@ -22,7 +22,13 @@
   }
 
   .widget-content {
-    //height: @widget-content-height;
+    height: 0;
+
+    -webkit-transition: 500ms;
+    -moz-transition: 500ms;
+    -ms-transition: 500ms;
+    -o-transition: 500ms;
+    transition: 500ms;
 
     .widget-reset-button {
       position: absolute;
