--- a/src/views/dc.html
+++ b/src/views/dc.html
@@ -1,4 +1,4 @@
-<div av-visualization-processor page-data="dcController.pageData">
+<div av-visualization-processor page-map="dcController.pageMap" page-data="dcController.pageData">
     <div class="work-space-area">
         <av-data-widget ng-repeat="widgetMeta in dcController.pageMap.workSpaces" widget-meta-data="widgetMeta"
                         widget-type="work-space" widget-index="$index" page-type-map="dcController.typeMap"></av-data-widget>
