main menu items

--- a/src/less/left-menu.less
+++ b/src/less/left-menu.less
@@ -9,5 +9,17 @@
 
   a {
     color: white;
+    width: 100%;
+    display: inline-block;
+    padding: 10px;
+
+    &:hover {
+      background-color: @menu-item-hover-background-color;
+      text-decoration: none;
+    }
+
+    .left-menu-item-text {
+      padding-left: 10px;
+    }
   }
 }
