--- a/src/views/dc.html
+++ b/src/views/dc.html
@@ -18,13 +18,14 @@
             <div id="datasource" class="tab-pane fade in active">
                 <div class="datasource-holder text-center">
                     <h4>DataSource Section</h4>
-                    <h5>Coming Soon!</h5>
+                    <h6>DataSource can be changed right from here.</h6>
+                    <h6>Coming Soon!</h6>
                 </div>
             </div>
             <div id="settings" class="tab-pane fade">
                 <div class="settings-holder text-center">
                     <h4>Settings</h4>
-                    <h5>Coming Soon!</h5>
+                    <h6>Reserved!</h6>
                 </div>
             </div>
         </div>
@@ -49,7 +50,7 @@
             <div id="controllers" class="tab-pane fade">
                 <div class="controllers-holder text-center">
                     <h4>Controllers</h4>
-                    <h5>Coming Soon!</h5>
+                    <h6>Coming Soon!</h6>
                 </div>
             </div>
         </div>
@@ -74,7 +75,7 @@
             <div id="dynamic-injectors" class="tab-pane fade">
                 <div class="dynamic-injectors-holder text-center">
                     <h4>Dynamic Injectors</h4>
-                    <h5>Coming Soon!</h5>
+                    <h6>Future Plan!</h6>
                 </div>
             </div>
         </div>
