--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -10,3 +10,6 @@
 //av-data-widget
 @widget-header-height: 30px;
 @widget-content-height: 220px;
+
+//main left menu
+@menu-item-hover-background-color: #586675;
