--- a/src/views/left-menu.html
+++ b/src/views/left-menu.html
@@ -1,7 +1,10 @@
 <div class="left-menu">
     <ul class="list-unstyled">
         <li ng-repeat="link in appController.links">
-            <a av-collapse-main-left-menu ng-href="{{'#/' + link}}" ng-bind="link"></a>
+            <a av-collapse-main-left-menu ng-href="{{'#/' + link.viewKey}}">
+                <span><i class="fa" ng-class="link['icon-class']" aria-hidden="true"></i></span>
+                <span ng-bind="link.title" class="left-menu-item-text"></span>
+            </a>
         </li>
     </ul>
 </div>
