--- a/src/less/header.less
+++ b/src/less/header.less
@@ -13,8 +13,23 @@
     li {
       padding-left: 20px;
 
+      a {
+        color: white;
+      }
+
       i {
         cursor: pointer;
+      }
+    }
+
+    .disabled-item {
+      a {
+        color: darkgray;
+
+      }
+
+      i {
+        cursor: not-allowed;
       }
     }
   }
