--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,9 +1,12 @@
 <!--<div ng-bind="appController.testField"></div>-->
 <div class="av-header row">
     <ul class="header-icons pull-right list-inline">
-        <li><i class="fa fa-envelope"></i></li>
-        <li><i class="fa fa-bell"></i></li>
-        <li><i class="fa fa-user"></i></li>
+        <li><a href="https://github.com/HamidBehnam/angular-visualization-001/archive/master.zip"><i class="fa fa-download" aria-hidden="true"></i></a></li>
+        <li class="disabled-item"><a><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+        <li><a href="https://github.com/HamidBehnam/angular-visualization-001" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/hamidbehnampro" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+        <li class="disabled-item"><a><i class="fa fa-bell" aria-hidden="true"></i></a></li>
+        <li class="disabled-item"><a><i class="fa fa-user" aria-hidden="true"></i></a></li>
     </ul>
     <ul class="header-icons pull-left list-inline">
         <li av-collapse-main-left-menu><i class="main-left-opener fa fa-bars" aria-hidden="true"></i></li>
