reset function, main space css

--- a/src/less/work-space-area.less
+++ b/src/less/work-space-area.less
@@ -1,6 +1,9 @@
 .work-space-area {
   height: calc(~"100vh" - @header-height);
   width: 100%;
+  padding-top: 2px;
+  padding-bottom: @inner-range-height + 15;
   //Line blow was commented because of some jumping problems
-  //overflow-y: auto;
+  //re commented again :( no option.
+  overflow-y: auto;
 }
