ready for mobile screen

--- a/src/less/inner-left.less
+++ b/src/less/inner-left.less
@@ -33,8 +33,7 @@
   top: @header-height;
   left: @inner-handle-thickness;
   background-color: #F5F5F5;
-  //height: calc(~"100vh" - @header-height);
-  height: 100vh;
+  height: calc(~"100vh" - @header-height);
   width: @inner-left-width;
   box-shadow: 0 0 5px @inner-window-shadow-color;
   z-index: 2;
