--- a/src/less/inner-range.less
+++ b/src/less/inner-range.less
@@ -3,7 +3,7 @@
   bottom: 0;
   background-color: #748290;
   color: white;
-  width: 100vw;
+  //width: 100vw;
   height: @inner-handle-thickness;
   line-height: @inner-handle-thickness;
   //right: calc(~"-100vh" - -@header-height);
@@ -21,6 +21,10 @@
 
   i {
     font-size: smaller;
+  }
+
+  .inner-range-handle-items {
+    margin-bottom: 0;
   }
 }
 
