--- a/src/views/dc.html
+++ b/src/views/dc.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="inner-range-handle">
-        <ul class="list-inline">
+        <ul class="list-inline inner-range-handle-items">
             <li av-open-inner-range class="active"><span data-toggle="tab" data-target="#timeline"><i class="fa fa-filter"
                                                                                                       aria-hidden="true"></i> Timeline</span>
             </li>
