--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,6 +1,7 @@
 <!--<div ng-bind="appController.testField"></div>-->
 <div class="av-header row">
     <ul class="header-icons pull-right list-inline">
+        <li><a href="https://github.com/HamidBehnam/angular-visualization-001/blob/master/LICENSE.md" target="_blank"><i class="fa fa-deviantart" aria-hidden="true"></i></a></li>
         <li><a href="https://github.com/HamidBehnam/angular-visualization-001/archive/master.zip"><i class="fa fa-download" aria-hidden="true"></i></a></li>
         <li class="disabled-item"><a><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
         <li><a href="https://github.com/HamidBehnam/angular-visualization-001" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
